# ClangWiki

./: .env.example  .gitignore  README.md  pyproject.toml
backend/cppwiki/: __init__.py  analyzer.py  api.py  benchmark.py  config.py  database.py  embedding.py  generator.py  main.py  models.py  retrieval.py  service.py  validation.py
clang-tool/: CMakeLists.txt
clang-tool/src/: main.cpp
config/opencode/: enterprise-managed.json  local-ollama.json  zai-coding-plan.json  zai-general.json
config/profiles/: dev-cpu.env  dev-gpu.env  production-zai-cpu.env  target-cpu-glm.env
docs/: AGENT_DEPLOYMENT_GUIDE.md  migration-checklist.md  validation-report-current.md  versions.md
scripts/: bootstrap-wsl.sh  build-analyzer.sh  deploy-target.sh  install-models.sh  migrate-target.sh  preflight-target.sh  run-dev.sh  run-production.sh  setup-wsl.ps1  stop-services.sh  validate-target.sh  validate.sh
tests/: test_analyzer.py  test_api.py  test_deployment_contract.py  test_generator.py  test_service.py
tests/fixtures/cpp-sample/: CMakeLists.txt  Makefile
tests/fixtures/cpp-sample/include/: processor.h
tests/fixtures/cpp-sample/src/: main.cpp  processor.cpp
